<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical" >

    <TextView
        style="@style/content_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_delivery_type" />

    <RadioGroup
        android:id="@+id/radio_delivery_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_delivery_type_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_delivery_type_store" />

        <RadioButton
            android:id="@+id/radio_delivery_type_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_delivery_type_home" />

        <RadioButton
            android:id="@+id/radio_delivery_type_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_delivery_type_rural" />
    </RadioGroup>

</LinearLayout>