<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="1" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/label_driver_id"
        android:textColor="#0E125E"
        android:textSize="13sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text_driver_id"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/label_password"
        android:textColor="#0E125E"
        android:textSize="13sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_editfield"
        android:cursorVisible="true"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textCursorDrawable="@null" />

    <Button
        android:id="@+id/bnt_register"
        style="@style/button_big_text"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_green"
        android:text="@string/label_login" />

    <TextView
        android:id="@+id/text_login_message"
        style="@style/content_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

</LinearLayout>